# Assembler-Project

./: CMakeLists.txt  assembler.c  assembler.h  assembler_cleanup.c  assembler_cleanup.h  encoder.c  encoder.h  entry_extern.c  entry_extern.h  errors.c  errors.h  first_pass.c  first_pass.h  globals.h  macros.c  macros.h  main.c  opcode_groups.h  operand_validation.c  operand_validation.h  output  second_pass.c  second_pass.h  symbol_table.c  symbol_table.h  utils.c  utils.h  word_check.c
